# iso-rs

./: Cargo.toml  LICENSE-MIT  README.md  test.iso
crates/iso-cli/: Cargo.toml
crates/iso-cli/isoroot/: limine.conf
crates/iso-cli/src/: main.rs
crates/iso-rs/: Cargo.toml
crates/iso-rs/src/: boot.rs  directory.rs  file.rs  lib.rs  path.rs  types.rs  volume.rs
spec/: Specification.md
src/: boot.rs  lib.rs  types.rs
