[package]
name = "iso9660-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
bitflags = { version = "2.9.0", features = ["bytemuck"] }
bytemuck = { version = "1.22.0", features = ["derive"] }
chrono = "0.4.40"
log.workspace = true
tempfile = "3.19.1"

[dev-dependencies]
static_assertions = "1.1.0"
